# Example_negotiation_mode_local

./: .env.example  README.md  config.py  llm_output_processer.py  negotiation_alice.py  negotiation_bob.py  pyproject.toml
FunctionCallRelation/: fcr.txt  negotiation_alice.txt  negotiation_bob.txt  negotiation_protocol.txt  prompt.txt  test_LLM.py
app_protocols/: __init__.py  app_protocols.py  protocol_container.py
app_protocols/protocol_base/: meta_data.json  negotiation_info.json  protocol_documention.md  provider_base.py  provider_description.json  requester_base.py  requester_description.json
e2e_encryption/: __init__.py  message_generation.py  short_term_key_generater.py  wss_message_client.py  wss_message_sdk.py
meta_protocol/: __init__.py  meta_protocol.py  protocol_negotiator.py
meta_protocol/code_generator/: code_generator.py  provider_generator.py  requester_generator.py
simple_node/: __init__.py  simple_negotion_node.py  simple_node.py  simple_node_session.py  simple_node_v2.py  simple_wss_wraper.py
utils/: alice.json  bob.json  crypto_tool.py  did_generate.py  did_verify.py  log_base.py  utils.py
utils/llm/: base_llm.py
